styles.css
/* ... */
.advSrchtool form table { align:left; }

.advSrchtool form table td { align:left; vertical-align:top; padding-top:6px; }

.advSrchtool form table td { width:auto; }

.advSrchtool form#search table td { width:125px; }

.advSrchtool form textarea { font-size:1.2em; }

.advSrchtool td {font-size:.85em;}

.advSrchtoolSubmit { padding-top:10px; padding-left:128px; }

.advSrchtoolWide form { margin:auto; padding:5px 10px; }

.advSrchtoolWide { display:block; background:#d2e0e7;font-size:1em; border-right:1px solid #BDBDBD; padding:3px; border-bottom:1px solid #BDBDBD; margin:0 3% 1% 3%; }

.advSrchtoolWide form table { width:100%; }

.advSrchtoolWide form table tr td { vertical-align:top; padding-bottom:5px; }

.advSrchPrograms form  { width:95%; margin-left:0;}

.advSrchPrograms table { width:415px; }

form table td.advSrchProgramsLabel { text-align:right; width:95px; }

form table td.advSrchProgramsData  { width:300px; }

.advSrchProgramsColspan table { width:250px; }

.advSrchProgramsColspan table td { text-align:right; width:100px; }

div .advSrchtool { width:90%; }

.alphaERM { text-align:center; }

/*controls display of authority redirect information */
.authorityRedirect { display:block; background:#FFFBD6; font-size:90%; border-right:1px solid #999; padding:10px; border-bottom:1px solid #999; border-top:0px; border-left:0px;margin:2% 10% 1% 10%; text-align:center; }

.authPublicNote { font-size: 80%; background: #F7F4F4; }


/* This is used in the Materials Booking calendar */
.available { font-weight: bold; color: green; }

.availLimMessage { font-style: italic; text-align: left; }


/* classes for bib display */
/* see also Web options TABLEPARAM_BIB... */

.bibBookingsHeader { font-weight: bold; text-decoration: none; padding: 3px; border: 1px solid #00437f; background: #FFFBC6; margin-bottom:8px; }

.bibClear { clear:left; }

.bibCopyStatCont input { font-size:70%; }

.bibDetail { width:80%; }

#bibDisplayBody { padding:0px; margin-right:0px; }

.bibDisplayContentMain { float:left; width:78%; }/*margin-right:85px; }width:98%; }*/

#bibDisplayContent { }
/*#bibDisplayContent table { width:98%; }*/

#bibDisplayContent a:link { color: #000; }

#bibDisplayContent a:hover { text-decoration: underline; }

#bibDisplayContent a:visited { color: #000; }

#bibDisplayContent div { padding-bottom:.2em; }

#bibDisplayContent .bibTabs a:link, #bibDisplayContent .bibTabs a:visited, #bibDisplayContent .bibTabs a:active { color: #000; text-decoration: none; outline:none; }

#bibDisplayContent .bibTabs a:hover { text-decoration: underline;outline:none; }

div #bibDisplayContentMore { padding-left:7px; width:78%; clear:left; float:left; }
/*div #bibDisplayContentMore { padding-left:7px; width:90% }margin-right:23%; */

#bibDisplayContentMore a:link { color: #000; }

#bibDisplayContentMore a:hover { text-decoration: underline; }

#bibDisplayContentMore a:visited { color: #000; }

#bibDisplayContentMore div { padding-bottom:.2em; }

.bibHistoryRow { margin:2px 0 0 0; }

.bibHoldings { border: 0px; }

.bibHoldingsEntry { font-size:90%; border-bottom:1px solid #EEEEEE;border-top:1px solid #EEEEEE;border-right:1px solid #EEEEEE; }

.bibHoldingsHeader { }

.bibHoldingsLabel { font-size:90%; border-bottom:1px solid #EEEEEE;border-top:1px solid #EEEEEE;border-left:1px solid #EEEEEE; }

.bibHolds { font-size:90%; border: 1px solid #00437f; }

.bibHoldsEntry { font-size:90%; border: 1px solid #00437f; }

.bibInfo { }

.bibInfoData { font-size:.75em; }

.bibInfoEntry { }

.bibInfoLabel { font-size:.75em; font-weight: bold; padding:3px; }

.bibItems { border:0px; padding:0 3px 3px 3px; margin:0px; }

.bibItemsEntry { color: #000; text-align: left;font-size:90%; }

.bibItemsEntry td { border-bottom:1px solid #EEEEEE;font-size:90%; }

.bibItemsHeader { color: #000;font-size:90%; font-weight: bold; text-align: left;border-bottom:1px solid #eee; }

.bibItemsLabel { }

.bibLicense { }

.bibLicenseEntry { color: #000000; background: #FFF8EF; text-align: left; }

.bibLicenseHeader { color: #FFFFFF; background: #00437f; font-weight: bold; text-align: left; }

.bibLinks { border: 1px solid #00437f; }

#bibNavColumn { float:right; width:94px; }

.bibOrder { border: 1px solid #00437f; font-size:90%; }

.bibOrderEntry { }

.bibPager { text-align:right; font-size:85%; padding:5px 5px 0 0;margin:0 3px 0 5px; }

.bibRecordLink { width:100%;text-align:right; }

.bibRecordLink a { font-size:.7em;padding-right: 3px; font-style: italic; }

.bibResource { }

.bibResourceSidebar { float:right; width:20%; background-color:none; text-align:center; }

.bibResourceArea { float:right; width:20%; margin-right: 186; }

.bibResourceBrief { }

.bibResourceCaption { }

.bibResourceEntry td { font-weight: bold; }

.bibResourceHeader { }

.bibResourceLicense td { padding-bottom: 5px; }

.bibResourceLicenseEntry { background: #FFF99D; }

.bibResourceSubEntry { border-bottom: 1px solid blue; background-color: #FFFBC6; font-style: italic; }

div.browseResourceTable { margin-top:0px; border:0px; padding-top:20px }

table.browseResourceTable { margin-top:13px;border:0px; background-color:#F2F8FC; }

.bibResourceTable { margin:0px;border:none; }

.bibResourceTableEntry td { padding:0 3px; }

.bibResourceTableEntry, .browseResourceTableEntry { font-size: 85%; font-weight: normal; text-align:center; color: #000000; }

.bibResourceTableHeader, .browseResourceTableHeader { background:#001848;color:#fff;font-weight: bold; text-align:center; padding:3px;font-size:.9em; border-bottom:1px solid #BDBDBD; }

.bibResourceTableEntry select { display:block; width:100%; margin:2px 0px; }

.bibSearch form { margin:auto; padding:5px 10px;text-align:center; }

.bibSearch, .browseSearchtool {
	display:block;
	background:#fff;
	font-size:.9em;
	border:none;
	margin:5px;
	padding: 1em;
	}

 .bibSearchtoolMessage { text-align:center;font-size:1em; }

.bibSearchHistory { float:left; margin:0 0 0 6; padding: 0; }

.bibSearchHistory select { font-size:.8em; }
/* ... */

